# SlicerFlywheelConnect

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  INSTALLATION.md  ISSUES.md  LICENSE  README.md
FlywheelConnect/: CMakeLists.txt  flywheel_connect.py
FlywheelConnect/management/: fw_container_items.py  slicer_constants.py  tree_management.py
Images/: BrowseToExtension.png.DicomTags  ExtensionWizard.png.DicomTags  SelectExtension.png.DicomTags
Slicer_Extension/: CMakeLists.txt
Slicer_Extension/flywheel_connect/: CMakeLists.txt  flywheel_connect.png.DicomTags  flywheel_connect.py
Slicer_Extension/flywheel_connect/Resources/flywheel_connect/: flywheel_connect.png.DicomTags
Slicer_Extension/flywheel_connect/management/: tree_management.py
